changed to yellow navbar and footer

--- a/simbapp/templates/simbapp/base.html
+++ b/simbapp/templates/simbapp/base.html
@@ -15,9 +15,9 @@
 
   <p class="bg-dark text-light text-center mb-0">This app was cloned from petstore and deployed to heroku!</p>
  
-  <div class="container-fluid bg-danger bg-gradient text-light mb-5">
+  <div class="container-fluid bg-warning bg-gradient text-light mb-5">
     <div class="container">
-      <nav class="navbar navbar-expand-lg p-0 navbar-dark bg-danger bg-gradient">
+      <nav class="navbar navbar-expand-lg p-0 navbar-dark bg-warning bg-gradient">
         <div class="container-fluid p-4">
           <a class="navbar-brand" href="{% url 'home-page' %}">SPACE CATALOG</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
@@ -53,7 +53,7 @@
     {% endblock %}
   </div>
 
-  <footer class="container-fluid bg-danger bg-gradient text-light text-center p-5">
+  <footer class="container-fluid bg-warning bg-gradient text-light text-center p-5">
     <div class="row align-items-center p-3">
       <div class="col-sm-4">
         <p class="lead">
